--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ built/
 .project
 .pydevproject
 .sconsign.dblite
-options.json
+options.yml
 assets/images/icon/*_png.png
 assets/images/icons/*_png.png
 
