--- a/assets/models/cars/themis/phys.yml
+++ b/assets/models/cars/themis/phys.yml
@@ -1,13 +1,13 @@
-collision_box_shape: [.8, 1.4, .45]  # meters
-collision_box_pos: [0, 0, .39]  # meters
-wheel_fr_pos: [.75, 1.05, .4]  # meters
+collision_box_shape: [.75, 1.4, .25]  # meters
+collision_box_pos: [0, 0, .2]  # meters
+wheel_fr_pos: [.68, .85, .3]  # meters
 wheel_fr_radius: .3  # meters
-wheel_fl_pos: [-0.75, 1.05, .4]  # meters
+wheel_fl_pos: [-0.68, .85, .3]  # meters
 wheel_fl_radius: .3  # meters
-wheel_rr_pos: [.75, -0.8, .4]  # meters
-wheel_rr_radius: .35  # meters
-wheel_rl_pos: [-0.75, -0.8, .4]  # meters
-wheel_rl_radius: .35  # meters
+wheel_rr_pos: [.68, -1.0, .3]  # meters
+wheel_rr_radius: .3  # meters
+wheel_rl_pos: [-0.68, -1.0, .3]  # meters
+wheel_rl_radius: .3  # meters
 max_speed: 140.0  # Km/h
 mass: 1400  # kilograms
 steering_min_speed: 40  # degrees
