--- a/assets/models/cars/kronos/phys.yml
+++ b/assets/models/cars/kronos/phys.yml
@@ -1,5 +1,6 @@
 collision_box_shape: [.8, 1.4, .45]  # meters
 collision_box_pos: [0, 0, .39]  # meters
+collision_box_scale: [.9, .65, .5]
 wheel_fr_pos: [.75, 1.05, .4]  # meters
 wheel_fr_radius: .3  # meters
 wheel_fl_pos: [-0.75, 1.05, .4]  # meters
