--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ venv/
 .project
 .pydevproject
 .sconsign.dblite
+.settings/
 options.yml
 assets/images/icon/*_png.png
 assets/images/icons/*_png.png
