--- a/assets/models/cars/kronos/phys.yml
+++ b/assets/models/cars/kronos/phys.yml
@@ -1,22 +1,22 @@
 max_speed: 120.0  # Km/h
 mass: 280  # kilograms
-steering_min_speed: 30  # degrees
-steering_max_speed: 6  # degrees
+steering: [30, 6]  # degrees at min (max) speed
 steering_clamp: 40  # degrees
 steering_inc: 120  # degrees per second
 steering_dec: 120  # degrees per second
 engine_acc_frc: 2000
+engine_acc_frc_ratio: 1.0
 engine_dec_frc: -2000
 brake_frc: 12
 eng_brk_frc: 6
 pitch_control: 0  # default 0
-suspension_compression: 1  # default .83; should be lower than damping
+suspension_compression: .1  # default .83; should be lower than damping
 suspension_damping: .5  # default .88; should be greater than compression
 max_suspension_force: 14000  # default 6000
 max_suspension_travel_cm: 1800  # default 500
 skid_info: 1  # default 1
-suspension_stiffness: 120  # default 5.88; f1 car == 200
-wheels_damping_relaxation: 1.2  # overwrites suspension_damping
-wheels_damping_compression: 5  # overwrites suspension_compression
+suspension_stiffness: [36, 36]  # default 5.88; f1 car == 200
+wheels_damping_relaxation: [1.2, 1.2]  # overwrites suspension_damping
+wheels_damping_compression: [5, 5]  # overwrites suspension_compression
 friction_slip: 2.6  # default 10.5
-roll_influence: .01  # default .1
+roll_influence: [.2, .01]  # default .1
