--- a/assets/models/cars/teia/phys.yml
+++ b/assets/models/cars/teia/phys.yml
@@ -1,6 +1,6 @@
 max_speed: 120.0  # Km/h
-box_size: [.5, 1.0, .2]
-box_pos: [0, 0, .6]
+box_size: [.7, 1.4, .25]
+box_pos: [0, .05, .55]
 mass: 280  # kilograms
 steering: [30, 6]  # degrees at min (max) speed
 steering_clamp: 40  # degrees
@@ -10,6 +10,7 @@ engine_acc_frc: 2000
 engine_acc_frc_ratio: .5
 engine_dec_frc: -2000
 brake_frc: 12
+brake_ratio: .28
 eng_brk_frc: 6
 pitch_control: 0  # default 0
 suspension_compression: 1  # default .83; should be lower than damping
@@ -21,4 +22,5 @@ suspension_stiffness: [36, 36]  # default 5.88; f1 car == 200
 wheels_damping_relaxation: [1.2, 1.2]  # overwrites suspension_damping
 wheels_damping_compression: [5, 5]  # overwrites suspension_compression
 friction_slip: 2.55  # default 10.5
+friction_slip_rear: 2.55  # default 10.5
 roll_influence: [.2, .009]  # default .1
