--- a/assets/models/cars/iapeto/phys.yml
+++ b/assets/models/cars/iapeto/phys.yml
@@ -7,7 +7,7 @@ steering_clamp: 40  # degrees
 steering_inc: 120  # degrees per second
 steering_dec: 120  # degrees per second
 engine_acc_frc: 2000
-engine_acc_frc_ratio: .5
+engine_acc_frc_ratio: [.5, .4]
 engine_dec_frc: -2000
 brake_frc: 12
 brake_ratio: .28
@@ -21,6 +21,6 @@ skid_info: 1  # default 1
 suspension_stiffness: [36, 36]  # default 5.88; f1 car == 200
 wheels_damping_relaxation: [1.2, 1.2]  # overwrites suspension_damping
 wheels_damping_compression: [5, 5]  # overwrites suspension_compression
-friction_slip: 2.7  # default 10.5
-friction_slip_rear: 2.7  # default 10.5
+friction_slip: [2.7, 2.7]  # default 10.5
+friction_slip_rear: [2.7, 2.7]  # default 10.5
 roll_influence: [.2, .008]  # default .1
