--- a/assets/models/cars/diones/phys.yml
+++ b/assets/models/cars/diones/phys.yml
@@ -1,6 +1,7 @@
 max_speed: 118.0  # Km/h
 box_size: [.64, 1.36, .25]
 box_pos: [0, .1, .55]
+center_mass_offset: .05
 mass: 285  # kilograms
 steering: [30, 6]  # degrees at min (max) speed
 steering_clamp: 40  # degrees
