--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,7 @@ options*.yml
 *.geany
 *.tags
 yorg_error.txt
+assets/images/loading/fastload*
+assets/images/minimaps/fastload.png
+assets/models/tracks/fastload/
 
