shifted car's chassis

--- a/assets/models/cars/iperion/phys.yml
+++ b/assets/models/cars/iperion/phys.yml
@@ -1,6 +1,7 @@
 max_speed: 118.0  # Km/h
 box_size: [.76, 1.48, .25]
 box_pos: [0, -0.01, .55]
+gfx_z: .32
 center_mass_offset: .05
 mass: 285  # kilograms
 steering: [30, 6]  # degrees at min (max) speed
