--- a/assets/models/cars/iapeto/phys.yml
+++ b/assets/models/cars/iapeto/phys.yml
@@ -1,6 +1,7 @@
 max_speed: 116.0  # Km/h
 box_size: [.64, 1.4, .25]
 box_pos: [0, .05, .55]
+gfx_z: .28
 center_mass_offset: .05
 mass: 285  # kilograms
 steering: [30, 6]  # degrees at min (max) speed
