--- a/assets/tracks/moon/track.yml
+++ b/assets/tracks/moon/track.yml
@@ -1,4 +1,5 @@
 camera_vector: [-1, 0, -0.7]
 shadow_source: [50, -80, 80]
-laps: 2
-music: Eight Acre Oaks
+laps: 3
+music: A Chance At Our Future
+sorting: 0
