--- a/assets/tracks/rome/track.yml
+++ b/assets/tracks/rome/track.yml
@@ -1,4 +1,5 @@
 camera_vector: [-1, 0, -0.7]
 shadow_source: [50, -80, 80]
-laps: 3
-music: Salvation in Snow
+laps: 2
+music: Eight Acre Oaks
+sorting: 2
