fixed docs' building

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ assets/images/minimaps/fastload.png
 assets/models/tracks/fastload/
 assets/cars/minicar
 assets/tracks/minitrack
+assets/uml/sequence_diagrams.pdf
