--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "yyagl"]
 	path = yyagl
-	url = https://github.com/cflavio/yyagl
+	url = git@github.com:cflavio/yyagl
 	branch = stable
 [submodule "yracing"]
 	path = yracing
-	url = https://github.com/cflavio/yracing.git
+	url = git@github.com:cflavio/yracing.git
